force-app/main/default/objects/Recruiter_Metrics_c__c/Recruiter_Metrics_c__c.object-meta.xml
<CustomObject>
    <label>Recruiter Metrics</label>
    <nameField>
        <displayFormat>MET-{00000}</displayFormat>
        <label>Metrics Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruiter Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>