force-app/main/default/objects/Recruiter_Metrics_c__c/fields/Commission_Earned_MTD__c.field-meta.xml
<CustomField>
    <fullName>Commission_Earned_MTD__c</fullName>
    <label>Commission Earned (MTD)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>