force-app/main/default/objects/Recruiter_Metrics_c__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <formula>IF(
    Monthly_Interviews_Scheduled__c = 0,
    0,
    (Monthly_Placements__c / Monthly_Interviews_Scheduled__c) * 100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Conversion Rate (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>