force-app/main/default/objects/Recruiter_Metrics_c__c/fields/Daily_Submissions__c.field-meta.xml
<CustomField>
    <fullName>Daily_Submissions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Daily Submissions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>