force-app/main/default/objects/Recruiter_Metrics_c__c/fields/Monthly_Interviews_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Interviews_Scheduled__c</fullName>
    <label>Monthly Interviews Scheduled (MTD)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>