force-app/main/default/objects/Recruiter_Metrics_c__c/fields/Monthly_Placements__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Placements__c</fullName>
    <label>Monthly Placements (MTD)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>