force-app/main/default/objects/Recruiter_Metrics_c__c/fields/Monthly_Submissions_c__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Submissions_c__c</fullName>
    <label>Monthly Submissions (MTD)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>