force-app/main/default/objects/Recruiter_Metrics_c__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <label>Recruiter</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Recruiter Metrics</relationshipLabel>
    <relationshipName>Recruiter_Metrics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>