force-app/main/default/objects/Recruiter_Metrics_c__c/fields/Recruiter_Date_Key__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Date_Key__c</fullName>
    <externalId>true</externalId>
    <label>Recruiter Date Key</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>