force-app/main/default/objects/Recruiter_Metrics_c__c/validationRules/Metrics_Recruiter_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Metrics_Recruiter_Locked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Recruiter__c))</errorConditionFormula>
    <errorDisplayField>Recruiter__c</errorDisplayField>
    <errorMessage>The Recruiter on a Metrics record cannot be changed after creation.</errorMessage>
</ValidationRule>